[gd_scene load_steps=6 format=3 uid="uid://be3lucg3f3a3c"]

[ext_resource type="Script" uid="uid://clc5w67gry7ki" path="res://scripts/systems/stamp/StampBarController.gd" id="1_bd37c"]
[ext_resource type="Texture2D" uid="uid://c56e60snydr5r" path="res://assets/stamps/stamp_crossbar_expand_button.png" id="2_6a1oe"]
[ext_resource type="Texture2D" uid="uid://oovlb86b14wu" path="res://assets/stamps/stamp_crossbar.png" id="3_i7p4h"]
[ext_resource type="Texture2D" uid="uid://dx0d3hwbdppd" path="res://assets/stamps/approval_stamp_3.png" id="5_0hc55"]
[ext_resource type="Texture2D" uid="uid://b4d4v3o3gj2yt" path="res://assets/stamps/rejection_stamp_2.png" id="6_5qhns"]

[node name="StampBarController" type="Node2D"]
z_index = 10
z_as_relative = false
script = ExtResource("1_bd37c")

[node name="StampBar" type="Node2D" parent="."]
position = Vector2(-244, 0)

[node name="Background" type="Sprite2D" parent="StampBar"]
scale = Vector2(0.65, 0.65)
texture = ExtResource("3_i7p4h")

[node name="ApprovalStamp" type="Node2D" parent="StampBar/Background"]
texture_filter = 1
position = Vector2(-54.0666, -72.0889)
scale = Vector2(1.50185, 1.50185)

[node name="ApprovalButton" type="TextureButton" parent="StampBar/Background/ApprovalStamp"]
unique_name_in_owner = true
offset_left = -65.0
offset_top = -63.0
offset_right = 63.0
offset_bottom = 65.0
texture_normal = ExtResource("5_0hc55")
metadata/_edit_use_anchors_ = true

[node name="RejectionStamp" type="Node2D" parent="StampBar/Background"]
position = Vector2(262.824, -72.0889)
scale = Vector2(1.50185, 1.50185)

[node name="RejectionButton" type="TextureButton" parent="StampBar/Background/RejectionStamp"]
unique_name_in_owner = true
offset_left = -64.0
offset_top = -63.0
offset_right = 64.0
offset_bottom = 65.0
texture_normal = ExtResource("6_5qhns")
metadata/_edit_use_anchors_ = true

[node name="TogglePositionButton" type="TextureButton" parent="StampBar/Background"]
z_index = 9
z_as_relative = false
y_sort_enabled = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -564.035
offset_top = -87.1073
offset_right = -517.035
offset_bottom = 46.8927
grow_horizontal = 0
texture_normal = ExtResource("2_6a1oe")

[node name="StampBarAudio" type="AudioStreamPlayer2D" parent="StampBar"]

[node name="StartNode" type="Node2D" parent="."]
position = Vector2(-244, 0)

[node name="EndNode" type="Node2D" parent="."]
position = Vector2(305, 0)

[connection signal="mouse_entered" from="StampBar/Background/TogglePositionButton" to="." method="_on_toggle_position_button_mouse_entered"]
[connection signal="mouse_exited" from="StampBar/Background/TogglePositionButton" to="." method="_on_toggle_position_button_mouse_exited"]
